[metadata]
name = HyPyFlow
version = attr: hypyflow.__version__
author = Alejandro Martínez de Ternero Ruiz
author_email = a.mruiz@upm.es
description = Hyperspectral preprocessing tools for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.citsem.upm.es/hyperspectral
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    numpy
    matplotlib
    tqdm 
    joblib 
    opencv-python
    scikit-learn
